fix navbar logo not linking to home

--- a/app/assets/stylesheets/frontend/navbar.scss
+++ b/app/assets/stylesheets/frontend/navbar.scss
@@ -24,7 +24,7 @@ div {
   // border: 1px sozlid black;
 }
 
-#logo-span > img {
+#logo-span > a > img {
   max-height: 60px;
   max-width: 116.13px;
   width: 100%;
