--- a/app/assets/stylesheets/frontend/navbar.scss
+++ b/app/assets/stylesheets/frontend/navbar.scss
@@ -156,3 +156,8 @@ div {
   justify-content: center;
   cursor: pointer;
 }
+
+#navbar-sell-btn:hover {
+  color: white;
+  background-color: black;
+}
