--- a/app/assets/stylesheets/frontend/about.scss
+++ b/app/assets/stylesheets/frontend/about.scss
@@ -4,18 +4,24 @@
   width: 100%;
   height: 100%;
   background-color: white;
-  margin-top: 25px;
+  margin-top: 50px;
   align-items: center;
   font-family: 'proxima-nova', sans-serif;
   letter-spacing: 1px;
 }
 
 #about-div > ul > li:first-child {
-  font-size: 36px;
+  font-size: 48px;
   text-align: center;
   font-weight: bold;
   text-decoration: underline;
-  color: green;
-  text-decoration-color: black;
-  margin: 5px;
+  color: black;
+  text-decoration-color: green;
+  margin-bottom: 50px;
+}
+
+#about-div > ul > li:not(:first-child) {
+  margin: 12px;
+  list-style-type: disc;
+  font-size: 24px;
 }
