--- a/app/assets/stylesheets/frontend/about.scss
+++ b/app/assets/stylesheets/frontend/about.scss
@@ -10,6 +10,13 @@
   letter-spacing: 1px;
 }
 
+#about-div > p {
+  width: 40%;
+  min-width: 250px;
+  word-wrap: normal;
+  margin-bottom: 50px;
+}
+
 #about-div > ul > li:first-child {
   font-size: 48px;
   text-align: center;
