--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -50,8 +50,56 @@ input {
   width: 100%;
   height: 100vh;
   background-color: black;
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  flex-direction: column;
 }
 
 #splash-div > img {
   width: 100%;
+  position: absolute;
+  z-index: 0;
+}
+
+#splash-div > ul {
+  position: fixed;
+  z-index: 2;
+  color: black;
+  width: 75%;
+  height: 50%;
+  font: 16px 'proxima-nova', sans-serif;
+  letter-spacing: 1px;
+  text-shadow: 1px 1px #777777;
+  // margin-left: 15px;
+  // margin-right: 15px;
+  // margin-top: 10px;
+  // margin-bottom: 10px;
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+}
+
+#splash-div > ul > li:first-child {
+  font-size: 24px;
+  text-align: center;
+  // margin-top: 10px;
+  // margin-bottom: 15px;
+}
+
+#splash-div > ul > li {
+  // margin-top: 5px;
+  // margin-bottom: 5px;
+}
+
+
+#splash-div > div {
+  background-color: white;
+  width: 80%;
+  height: 50%;
+  z-index: 0;
+  position: fixed;
+  opacity: .75;
+  border-radius: 25px;
 }
