--- a/app/assets/stylesheets/frontend/listings.scss
+++ b/app/assets/stylesheets/frontend/listings.scss
@@ -222,3 +222,11 @@
   margin-top: 5px;
 
 }
+
+#listings-success { 
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+}
