--- a/app/assets/stylesheets/frontend/listings.scss
+++ b/app/assets/stylesheets/frontend/listings.scss
@@ -225,8 +225,8 @@
 
 #listings-success { 
   display: flex;
-  align-items: center;
-  justify-content: center;
+  justify-content: left;
+  margin-left: 10px;
   width: 100%;
   height: 100%;
   font: 14px 'proxima-nova', sans-serif;
