--- a/app/assets/stylesheets/frontend/follows.scss
+++ b/app/assets/stylesheets/frontend/follows.scss
@@ -18,6 +18,10 @@
   display: none;
 }
 
+#follows-info-text {
+  margin-top: 50px;
+}
+
 #follows-table-heading {
   font-family: impact;
   text-transform: uppercase;
