--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,8 @@
     <link href="https://fonts.googleapis.com/css?family=Archivo+Narrow&display=swap" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
     <script src="https://kit.fontawesome.com/1e907e69e8.js" crossorigin="anonymous"></script>
+    <meta prefix="og: http://ogp.me/ns" property='og:image' content='https://www.richardlu.dev/images/screenshots/s.png' />
+    <meta prefix="og: http://ogp.me/ns" property='og:description' content='Clone of popular shoe and clothing exchange StockX'>
     <link rel="apple-touch-icon" sizes="180x180" href="./apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="./favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="./favicon-16x16.png">
